--- a/src/components/OutputButtons/OutputButtons.scss
+++ b/src/components/OutputButtons/OutputButtons.scss
@@ -64,7 +64,7 @@
 }
 
 .icon-button-box {
-  transform: translateX(31px) translateY(-16px);
+  // transform: translateX(31px) translateY(-16px);
   align-items: flex-start;
   display: flex;
   justify-content: space-between;
