--- a/src/components/OutputButtons/OutputButtons.scss
+++ b/src/components/OutputButtons/OutputButtons.scss
@@ -36,7 +36,7 @@
   }
 }
 
-%choose-output-indicator {
+%rotate-arrow-down {
   transition: all cubic-bezier(0.68, -0.55, 0.265, 1.55) 750ms,
     fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms !important;
   transform: rotate(-90deg);
@@ -44,9 +44,12 @@
 %rotate-point-right {
   transform: rotate(0deg);
 }
+%rotate-point-up {
+  transform: rotate(90deg);
+}
 
 .choose-output-indicator {
-  @extend %choose-output-indicator;
+  @extend %rotate-arrow-down;
 }
 .rotate-point-right {
   @extend %rotate-point-right;
@@ -55,31 +58,10 @@
 .current-xs {
   // combine both for small screens
   .choose-output-indicator {
-    @extend %choose-output-indicator;
+    @extend %rotate-arrow-down;
     @extend %rotate-point-right;
   }
   .rotate-point-right {
     transform: rotate(-90deg);
-  }
-}
-
-.icon-button-box {
-  // transform: translateX(31px) translateY(-16px);
-  align-items: flex-start;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-
-  > a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-grow: 0;
-    width: 36px;
-    height: 36px;
-    text-align: center;
-  }
-  > .expand-spacer {
-    flex-grow: 4;
   }
 }
