--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,32 +1,13 @@
 // $link-color: #000000;
 // @import 'bootstrap/scss/_variables.scss';
 $font-family-base: 'Lato';
-$body-bg: #f3f3f3;
+$body-bg: $color-background;
 $font-size-base: 0.8125rem;
 
+@import 'theme/_variables.scss';
+@import 'theme/css-variables.scss';
 @import 'bootstrap/scss/bootstrap-reboot.scss';
 @import 'bootstrap/scss/bootstrap-grid.scss';
-
-/**
-Breakpoint 	Class infix 	Dimensions
-X-Small 	None 	<576px
-Small 	sm 	≥576px
-Medium 	md 	≥768px
-Large 	lg 	≥992px
-Extra large 	xl 	≥1200px
-Extra extra large 	xxl 	≥1400px
-*/
-// Bootstrap breaks
-// // Extra small screen / phone
-// $breakpoint-xs: 0;
-// // Small screen / phone
-// $breakpoint-sm: 576px;
-// // Medium screen / tablet
-// $breakpoint-md: 768px;
-// // Large screen / desktop
-// $breakpoint-lg: 992px;
-// // Extra large screen / wide desktop
-// $breakpoint-xl: 1200px;
 
 .schema-name-input {
   flex: 0 1 auto;
@@ -40,7 +21,7 @@ main {
   // height: 95vh;
   position: absolute;
   bottom: 2rem;
-  top: 0;
+  top: 0.5rem;
   right: 1rem;
   left: 1rem;
 
@@ -107,7 +88,7 @@ a.locked {
 }
 
 main > nav {
-  padding: 0.5rem;
+  // padding: 0.5rem;
 }
 
 .snack-close {
