--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,9 +2,11 @@ h1 {
   min-height: 45px;
 }
 .brand-link {
+  font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu,
+    Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   cursor: pointer;
-  margin: 0.5rem 1rem;
-  position: absolute;
+  margin: 0.1rem 1rem;
+  // position: absolute;
   display: flex;
   align-items: flex-end;
   // @media (max-width: $breakpoint-sm) {
@@ -12,12 +14,17 @@ h1 {
   //     display: none;
   //   }
   // }
-
+  --logo-primary: var(--color-primary);
+  --logo-secondary: var(--color-error);
+  &:hover {
+    --logo-primary: var(--color-primary);
+    --logo-secondary: var(--color-success);
+  }
   svg {
     // margin-top: -20px;
     // margin-left: -10px;
     // margin-right: 10px;
-    margin: 0.2rem 1rem 0.2rem 0.2rem;
+    margin: 0.2rem 0.6rem 0.2rem 0.2rem;
     width: 55px;
     height: 55px;
   }
@@ -57,9 +64,15 @@ h1 {
   }
 }
 
-// .nav-breadcrumbs {
-
-// }
+.nav-breadcrumbs {
+  margin: 0 1rem !important;
+  a:hover,
+  a.active {
+    span {
+      text-decoration: underline;
+    }
+  }
+}
 
 .demo-link {
   height: 2rem;
