--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,7 +2,7 @@ h1 {
   min-height: 45px;
 }
 .brand-link {
-  font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu,
+  font-family: Lato, Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu,
     Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   cursor: pointer;
   margin: 0.1rem 1rem;
@@ -86,7 +86,7 @@ h1 {
   cursor: pointer;
   // text-decoration: underline;
   &:hover {
-    color: var(--color-secondary);
+    color: var(--text-color-secondary);
     .roll-dice {
       animation: roll-dice 1.5s steps(6) infinite;
       background-color: var(--color-error);
@@ -95,7 +95,7 @@ h1 {
 }
 
 .roll-dice-wrapper {
-  border: 1px solid var(--color-secondary);
+  // border: 1px solid var(--text-color-secondary);
   border-radius: 0.3rem;
   width: 28px;
   height: 28px;
@@ -103,7 +103,7 @@ h1 {
 }
 .roll-dice {
   box-sizing: border-box;
-  background-color: var(--color-error);
+  background-color: var(--color-primary);
   &.animated {
     animation: roll-dice 0.75s steps(6) infinite;
   }
