--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,403 +1,52 @@
-/**
-Breakpoint 	Class infix 	Dimensions
-X-Small 	None 	<576px
-Small 	sm 	≥576px
-Medium 	md 	≥768px
-Large 	lg 	≥992px
-Extra large 	xl 	≥1200px
-Extra extra large 	xxl 	≥1400px
-*/
-// Bootstrap breaks
-// Extra small screen / phone
-$breakpoint-xs: 0;
-// Small screen / phone
-$breakpoint-sm: 576px;
-// Medium screen / tablet
-$breakpoint-md: 768px;
-// Large screen / desktop
-$breakpoint-lg: 992px;
-// Extra large screen / wide desktop
-$breakpoint-xl: 1200p;
+// $link-color: #000000;
+// @import 'bootstrap/scss/_variables.scss';
+$font-family-base: 'Lato';
+$body-bg: $color-background;
+$font-size-base: 0.8125rem;
 
-.App {
-  text-align: left;
-  nav.row {
-    flex: 0 1 120px;
-  }
-  main {
-    min-height: 90vh;
-    // height: 95vh;
-    flex-direction: column;
-    display: flex;
+@import 'theme/_variables.scss';
+@import 'theme/css-variables.scss';
+@import 'bootstrap/scss/bootstrap-reboot.scss';
+@import 'bootstrap/scss/bootstrap-grid.scss';
 
-    margin: 0.25rem !important;
-
-    &.current-sm {
-      margin: 0rem !important;
-    }
-    &.current-md {
-      margin: 0rem !important;
-    }
-    &.current-lg {
-      margin: 1rem !important;
-    }
-    &.current-xl {
-      margin: 1.5rem 2.5rem !important;
-    }
-
-    // .data-input {
-    //   textarea:empty {
-    //     font-size: 22px;
-    //     text-align: center;
-    //     padding: 20px 0 0 0;
-    //   }
-    //   textarea {
-    //     max-height: 70vh;
-    //   }
-    // }
-
-    section.page {
-      width: 100%;
-      // height: calc(90vh - 125px);
-      display: flex;
-      justify-content: stretch;
-      flex-direction: row;
-      flex-grow: 1;
-
-      legend {
-        display: block;
-        font-size: 0.8rem;
-        flex-grow: 0;
-        > div {
-          font-weight: 900;
-          font-size: 1.2em;
-          white-space: nowrap;
-        }
-      }
-      > section {
-        display: flex;
-        justify-content: stretch;
-        flex-direction: column;
-        overflow-y: visible;
-        overflow-x: visible;
-        // max-height: 75vh;
-        transition: height ease-in 500ms;
-      }
-    }
-    .generated-code {
-      flex-grow: 1;
-    }
-    .output-buttons-panel {
-      > button {
-        min-height: 2.75rem;
-      }
-      // max-height: 3.75rem;
-      flex-grow: 1;
-      justify-content: stretch;
-      // margin: auto 0;
-      > div svg {
-        height: 2.75rem;
-        width: 2.75rem;
-        margin: 0.5rem;
-      }
-    }
-  }
-
-  nav .MuiBreadcrumbs-li svg {
-    margin-top: -7px;
-    margin-right: 2px;
-  }
-}
-
-// .App main.results-loaded section.page .code-edit {
-// }
-.App {
-  main {
-    &.stacked-view {
-      legend > div {
-        display: inline-block;
-        margin-right: 0.5rem;
-      }
-      .resizable-editor {
-        // flex-shrink: 1;
-        flex: 1 1 50%;
-      }
-      .output-buttons-panel {
-        flex: 0 0 70px;
-      }
-      .generated-code {
-        flex: 1 2 15vh;
-      }
-    }
-    &.results-loaded.stacked-view {
-      .resizable-editor {
-        flex: 1 2 200px;
-        min-height: 12vh;
-      }
-      .generated-code {
-        flex: 2 0 25vh;
-      }
-      .output-buttons {
-        align-items: center;
-        justify-content: center;
-      }
-    }
-  }
-  // Define the small-screen stacked UI css:
-  main.stacked-view {
-    flex-grow: 0;
-
-    // .generated-code {
-    //   flex: 0 1 100%;
-    // }
-
-    section {
-      padding-left: 0;
-      padding-right: 0;
-    }
-    section.page {
-      flex: 2 0 100%;
-      display: inline-flex;
-      flex-direction: column;
-      // flex-shrink: 2;
-      // flex-grow: 1;
-    }
-    .output-buttons-panel {
-      .output-buttons {
-        > button {
-          width: 100%;
-          max-height: 2.125rem;
-        }
-      }
-      > legend {
-        width: 100%;
-      }
-      // max-height: 6rem;
-      margin: 0.5rem auto;
-      // flex: 0 1 100%;
-      flex-direction: column;
-
-      svg {
-        height: 1.75rem;
-        width: 1.75rem;
-      }
-    }
-  }
-}
-
-.current-xs,
-.current-sm {
-  .demo-data-buttons {
-    order: 3;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    overflow-x: auto;
-  }
-}
 .schema-name-input {
-  order: 1;
-}
-// Header Styles
-.demo-data-buttons {
-  order: 3;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  align-items: flex-end;
-  // align-items: center;
-  position: relative;
-  z-index: -1;
-
-  .MuiChip-root {
-    margin: 0 1.5px 1.5px 0;
-    display: flex;
-    justify-content: flex-start;
-    svg {
-      margin-left: 2.5px;
-    }
-  }
-
-  .MuiChip-label {
-    flex-grow: 1;
-    text-align: center;
-  }
-
-  label {
-    margin-right: 3px;
-    display: flex;
-    // align-items: center;
-    justify-content: center;
-    margin: 0;
-    line-height: 24px;
-    // height: 24px;
-    font-weight: 500;
-    svg {
-      margin: 0 2.5px;
-    }
-  }
+  flex: 0 1 auto;
 }
 
-.row-block {
-  margin-left: 0;
-  margin-right: 0;
-  position: relative;
-  z-index: 100;
-}
+main {
+  // min-height: 85vh;
+  // max-height: 94vh;
+  // overflow-y: auto;
+  // height: fit-content;
+  // height: 95vh;
+  position: absolute;
+  bottom: 2rem;
+  top: 0.5rem;
+  right: 1rem;
+  left: 1rem;
 
-.button-section {
-  margin-top: 0.2rem;
-  padding: 0.8rem;
-}
-
-.popover,
-.popover-wrapper {
-  z-index: 10;
-}
-
-form.generator {
-  display: flex;
-  flex-direction: row;
-}
-
-.progress-message {
-  text-align: center;
-  font-size: 1.8rem;
-  margin: 0 auto;
-  padding: 1.5rem 1rem;
-}
-
-.options-ui {
-  .form-group {
-    margin-bottom: 0.5rem;
-  }
-}
-
-.input-data,
-.output-data {
-  width: 40vw;
-  display: flex;
-  align-items: stretch;
   flex-direction: column;
-  /* d-flex align-items-stretch flex-column */
-  /* margin: 0 auto; */
-}
+  display: flex;
 
-.output-ui {
-  width: 20vw;
-}
-.output-ui > div {
-  flex-direction: column;
-}
-.output-ui button {
-  min-width: 125px;
-  width: 96%;
-  max-width: 140px;
-  margin-bottom: 1.4rem;
-  padding: 1.125rem;
-  font-size: 1.2rem;
-}
-// @media (max-width: $breakpoint-sm) {
-//   .App {
-//     max-width: 100% !important;
-//     padding: 0 10px !important;
+  // margin: 0.25rem !important;
 
-//     &.container {
-//       max-width: 100% !important;
-//     }
-
-//     main {
-//       > section {
-//         height: calc(91vh - 220px);
-//       }
-//     }
-//     .shadow-lg {
-//       margin: 1rem 0.25rem 0.25rem 0.25rem !important;
-//     }
-
-//     .brand-link {
-//       font-size: 0.72em;
-//     }
-//   }
-
-//   .output-buttons {
-//     .MuiButton-startIcon {
-//       margin: auto 0;
-//     }
-//   }
-// }
-
-@media (max-width: 575px) {
-  form.generator {
-    flex-direction: column;
+  &.current-xs {
+    position: static;
+    margin: 0 0 2rem 0;
   }
-  .output-ui > div {
-    flex-direction: row;
-    justify-content: space-between;
+  &.current-sm {
+    position: static;
+    margin: 0 0 2rem 0;
   }
-  .output-ui button {
-    max-width: 175px;
-  }
-  .output-ui,
-  .input-data,
-  .output-data {
-    width: 100%;
-    /* margin: 0 auto; */
-  }
-}
-
-.output-data textarea,
-.input-data textarea {
-  width: 100%;
-  height: 33vh;
-  /* overscroll-behavior-y: none; */
-}
-
-.input-data textarea {
-  max-height: 270px;
-}
-.output-data textarea {
-  min-height: 500px;
-}
-
-form .field-name {
-  display: block;
-  font-size: 1.15rem;
-}
-
-.output-ui button svg {
-  max-width: 50px;
-  margin: 1rem 1.4rem;
-}
-
-.schema-app-nav ul {
-  flex-direction: row;
-}
-.schema-app-nav li {
-  padding: auto 1.5rem;
-  margin: 0 1.25rem;
-}
-
-.demo-menu {
-  position: relative;
-  z-index: 20;
-  ul {
-    position: relative;
-    z-index: 20;
-    li {
-      position: relative;
-      z-index: 20;
-    }
-  }
-}
-
-.main-panel {
-  min-height: 40vh;
-  .panel {
-    min-height: 140px !important;
-    // h6: {
-    //   margin: 1rem 0 !important;
-    // }
-  }
+  // &.current-md {
+  //   margin: 0rem !important;
+  // }
+  // &.current-lg {
+  //   margin: 1rem !important;
+  // }
+  // &.current-xl {
+  //   margin: 0rem 2.5rem 2rem 2.5rem !important;
+  // }
 }
 
 .schema-options {
@@ -428,7 +77,7 @@ form .field-name {
 
 a.unlocked {
   cursor: pointer;
-  color: #469408;
+  // color: #469408;
   font-weight: 500;
 }
 a.locked {
@@ -436,4 +85,16 @@ a.locked {
   color: #77777766;
   font-weight: 200;
   text-decoration: none;
+}
+
+main > nav {
+  // padding: 0.5rem;
+}
+
+.snack-close {
+  font-size: 1.2rem;
+  font-weight: 900;
+  &:hover {
+    color: #ffffff;
+  }
 }
