--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,7 +20,7 @@ main {
   // height: fit-content;
   // height: 95vh;
   position: absolute;
-  bottom: 2rem;
+  // bottom: 2rem;
   top: 0.5rem;
   right: 1rem;
   left: 1rem;
