--- a/src/components/AdvancedOptionsForm/AdvancedOptionsForm.scss
+++ b/src/components/AdvancedOptionsForm/AdvancedOptionsForm.scss
@@ -1,3 +1,10 @@
+.back-button {
+  &:hover {
+    svg {
+      color: var(--color-success);
+    }
+  }
+}
 .schema-options {
   fieldset {
     margin-left: 1rem;
@@ -24,6 +31,7 @@
       }
       > span:last-of-type {
         flex: 0 0 80px;
+        text-align: right;
       }
     }
   }
@@ -42,11 +50,33 @@
   box-shadow: inset 4rem -4em 4em rgba(120, 120, 120, 0.12);
 }
 
-.slider-input {
-  span:last-of-type {
-    text-align: right;
+.pulse-success-bg {
+  animation: pulse-success 1s ease-in;
+  background-color: rgba(var(--color-success-rgb), 0.125);
+  // background-color: var(--color-success);
+  // box-shadow: 0 0 0 0 var(--color-success);
+  // border-radius: 100%;
+  // transform: scale(0.65);
+  z-index: 100;
+}
+
+@keyframes pulse-success {
+  0% {
+    // transform: scale(0.8);
+    background-color: rgba(var(--color-success-rgb), 0);
+  }
+
+  50% {
+    // transform: scale(1.1);
+    background-color: rgba(var(--color-success-rgb), 0.25);
+  }
+
+  100% {
+    // transform: scale(1);
+    background-color: rgba(var(--color-success-rgb), 0);
   }
 }
+
 /**
 inset 0 -3em 3em rgba(0,0,0,0.1),
       0 0  0 2px rgb(255,255,255),
