--- a/src/components/Layouts/Panel.scss
+++ b/src/components/Layouts/Panel.scss
@@ -1,3 +1,10 @@
 .MuiCardContent-root:last-child {
   padding: 16px !important;
 }
+
+.panel-component {
+  transition: box-shadow 1000ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  &.panel-disabled {
+    filter: blur(2px) grayscale(1) saturate(1.2);
+  }
+}
