--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,12 +1,21 @@
 h1 {
-  min-height: 45px;
+  min-height: 50px;
 }
 .brand-link {
+  --logo-primary: var(--color-primary);
+  --logo-secondary: var(--color-success);
+  &:hover {
+    --logo-primary: var(--color-primary);
+    --logo-secondary: var(--color-error);
+    color: var(--logo-primary);
+  }
+
+  line-height: 1.1;
   font-family: Lato, Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu,
     Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   cursor: pointer;
   margin: 0.1rem 1rem;
-  // position: absolute;
+  font-size: 22px;
   display: flex;
   align-items: flex-end;
   // @media (max-width: $breakpoint-sm) {
@@ -14,17 +23,12 @@ h1 {
   //     display: none;
   //   }
   // }
-  --logo-primary: var(--color-primary);
-  --logo-secondary: var(--color-error);
-  &:hover {
-    --logo-primary: var(--color-primary);
-    --logo-secondary: var(--color-success);
-  }
   svg {
     // margin-top: -20px;
     // margin-left: -10px;
     // margin-right: 10px;
-    margin: 0.2rem 0.6rem 0.2rem 0.2rem;
+    margin: 0 0.4rem 0 0;
+    // margin: 0.2rem 0.6rem 0.2rem 0.2rem;
     width: 55px;
     height: 55px;
   }
@@ -43,7 +47,14 @@ h1 {
   justify-content: flex-end;
   align-items: center;
   flex-direction: row;
-
+  > a {
+    &:hover {
+      svg {
+        color: var(--color-success);
+        filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.4));
+      }
+    }
+  }
   > a,
   > label {
     margin-left: 1rem;
@@ -52,7 +63,7 @@ h1 {
     justify-content: center;
     align-items: center;
     flex-grow: 0;
-    width: 36px;
+    width: 42px;
     height: 36px;
     text-align: center;
   }
@@ -94,6 +105,24 @@ h1 {
   }
 }
 
+.options-link {
+  transition: transform 750ms cubic-bezier(0.215, 0.61, 0.355, 1);
+  svg {
+    transition: color 550ms cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  &.active {
+    transform: rotate(1turn);
+    // svg {
+    // }
+  }
+  &:hover {
+    transform: rotate(-180deg);
+    svg {
+      color: var(--color-success);
+    }
+  }
+}
+
 .roll-dice-wrapper {
   // border: 1px solid var(--text-color-secondary);
   border-radius: 0.3rem;
@@ -119,5 +148,71 @@ h1 {
 @keyframes roll-dice {
   100% {
     background-position: -600px 0;
+  }
+}
+
+.roll-dice-20px-wrapper {
+  // border: 1px solid var(--text-color-secondary);
+  border-radius: 0.3rem;
+  width: 24px;
+  height: 24px;
+  padding: 1px 1px 0 0;
+}
+.roll-dice-20px {
+  box-sizing: border-box;
+  background-color: var(--color-primary);
+  &.animated {
+    animation: roll-dice-20px 0.75s steps(6) infinite;
+  }
+  border-radius: 0.5rem;
+  display: inline-block;
+  // animation: roll-dice-20px 1.5s steps(6) infinite;
+  background-image: url(../../../public/images/dice-sprite-h20px.svg);
+  width: 20px;
+  height: 20px;
+  background-size: cover;
+}
+
+@keyframes roll-dice-20px {
+  100% {
+    background-position: -120px 0;
+  }
+}
+
+///////////////
+.btn-load-demo {
+  &:hover {
+    .roll-dice-16px {
+      animation: roll-dice-16px 1.25s steps(6) infinite;
+    }
+  }
+}
+.roll-dice-16px-wrapper {
+  margin-top: 2px;
+  line-height: 1;
+  // border: 1px solid var(--text-color-secondary);
+  // border-radius: 2px;
+  // width: 19px;
+  // height: 19px;
+  padding: 0; //1px 1px 0 0;
+}
+.roll-dice-16px {
+  box-sizing: border-box;
+  background-color: var(--color-primary);
+  &.animated {
+    animation: roll-dice-16px 0.75s steps(6) infinite;
+  }
+  border-radius: 2px;
+  display: inline-block;
+  // animation: roll-dice-16px 1.5s steps(6) infinite;
+  background-image: url(../../../public/images/dice-sprite-h16px.svg);
+  width: 16px;
+  height: 16px;
+  background-size: cover;
+}
+
+@keyframes roll-dice-16px {
+  100% {
+    background-position: -96px 0;
   }
 }
